--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 	<title>Page Principal</title>
 	<link rel="stylesheet" href="style.css"/>
     </head>
-
+<header></header>
 <body>
 	<nav>
 	  <ul>
