--- a/Certifications.html
+++ b/Certifications.html
@@ -39,7 +39,7 @@
         <img src="images/ANSSI.png" alt="certification-ANSSI" />
         <h3>Certification de l'ANSSI</h3>
         <p class="issuer">MOOC — Novembre 2025</p>
-        <p><a href="certification-ANSSI.pdf" target="_blank" > Voir le certificat</a></p>
+        <p><a href="" target="_blank" > Voir le certificat</a></p>
       </article>
 
       <article class="cert-card">
