--- a/Certifications.html
+++ b/Certifications.html
@@ -23,7 +23,7 @@
   </nav>
 
   
-    <h1>Mes certifications </h1>
+    <h1>Mes certifications : </h1>
  
 
   <main class="container">
@@ -39,14 +39,14 @@
         <img src="images/ANSSI.png" alt="certification-ANSSI" />
         <h3>Certification de l'ANSSI</h3>
         <p class="issuer">MOOC — Novembre 2025</p>
-        <p><a href="" target="_blank" > Voir le certificat</a></p>
+        <p><a href="certification-ANSSI.pdf" target="_blank" > Voir le certificat</a></p>
       </article>
 
       <article class="cert-card">
         <img src="images/CNIL.svg" alt="CNIL" />
         <h3>Certifications de la CNIL</h3>
         <p class="issuer">MOOC — Novembre 2025</p>
-        <p><a href="" target="_blank" > Voir le certificat</a></p>
+        <p><a href="Attestation de la CNIL.zip" target="_blank" > Voir le certificat</a></p>
       </article>
       
       
