--- a/Contactez-moi.html
+++ b/Contactez-moi.html
@@ -20,6 +20,11 @@
     </head>
 <body>
 
+<section class ="contact">
+<h1>Contactez-moi</h1>
+
+<p99>Une question, un projet, des information</p99>
+
 
 
 
