--- a/Contactez-moi.html
+++ b/Contactez-moi.html
@@ -24,17 +24,44 @@
 <h1>Contactez-moi</h1>
 
 <p99>Une question, un projet, des information</p99>
+ <main class="container contact-page">
+      <h1>Contactez-moi</h1>
 
+      <section class="contact-info">
+        <p>Pour me joindre directement — remplacez les valeurs par vos informations réelles :</p>
+      </section>
 
+      <section class="contact-form">
+        <h2>Envoyer un message</h2>
+        <form id="contactForm">
+          <label for="name">Nom</label>
+          <input id="name" name="name" type="text" required />
 
+          <label for="email">Votre email</label>
+          <input id="email" name="email" type="email" required />
 
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="6" required></textarea>
 
+          <button type="submit">Envoyer</button>
+          <p class="form-note">Le formulaire ouvrira votre client mail pour envoyer le message.</p>
+        </form>
+      </section>
 
+    </main>
+
+    <script>
+    </script>
+  </body>
 
 <footer>
     <div class="footer-content">
       <p>&copy; 2026 Quentin Delvallée - Tous droits réservés</p>
-      <p><a href=" mail to:quintusdel@gmail.com">quintusdel@gmail.com</a> </p>
+      <p><a href=" mail to:quintusdel@gmail.com">quintusdel@gmail.com</a> </p> <br>
+      <img src ="images/tel.png" height="25" width="25"> +33 6.23.66.79.74
+      <img src ="images/mail.png" height="25" width="25"> quintusdel@gmail.com
+      <img src ="images/Mpas.avif" height="25" width="25"> 1 rue de Gray, 25000 Besançon
+      <img src ="images/GitHub.png" height="25" width="25"> Quentin-Del25
     </div>
   </footer>
 
