--- a/Contactez-moi.html
+++ b/Contactez-moi.html
@@ -23,12 +23,11 @@
 <section class ="contact">
 <h1>Contactez-moi</h1>
 
-<p99>Une question, un projet, des information</p99>
+<p99>Une question, un projet, des informations</p99>
  <main class="container contact-page">
-      <h1>Contactez-moi</h1>
 
       <section class="contact-info">
-        <p>Pour me joindre directement — remplacez les valeurs par vos informations réelles :</p>
+        <p55>Pour me joindre directement — remplacez les valeurs par vos informations personnel :</p55>
       </section>
 
       <section class="contact-form">
@@ -44,7 +43,7 @@
           <textarea id="message" name="message" rows="6" required></textarea>
 
           <button type="submit">Envoyer</button>
-          <p class="form-note">Le formulaire ouvrira votre client mail pour envoyer le message.</p>
+          <p class="form-note">Une fois le formulaire complèter, je le reçois sur mon adresse personnel</p>
         </form>
       </section>
 
