--- a/Ma_Veille_technologique.html
+++ b/Ma_Veille_technologique.html
@@ -1,8 +1,9 @@
-<html>
-
-<head>
+<!DOCTYPE html>
+<htmL lang ="fr">
+  <head>
     <h1>Ma_Veille_technologique</h1>
     <a href="Index.html">Accueil</a>
+    <title >L'Inteligence Artificielle</title>
 </head>
 <body>
 	<nav>
