--- a/Mes_Expreriences_Professionnels.html
+++ b/Mes_Expreriences_Professionnels.html
@@ -49,6 +49,8 @@
 		</div>
 	<footer>
 		<p>&copy; 2026 Quentin Delvallée - Tous droits réservés</p>
+		<p><a href="mail to : quintusdel@gmail.com">quintusdel@gmail.com</a></p>
+
 	</footer>
 </body>
 </html>
