--- a/Certifications.html
+++ b/Certifications.html
@@ -31,7 +31,7 @@
       <article class="cert-card">
         <img src="images/PIX.png" alt="PIX" />
         <h3>Certification PIX</h3>
-        <p class ="issuer">Certificat — 8 Février 2025 </p>
+        <p class ="issuer">Certificat — 18 Février 2025 </p>
         <p><a href="CertificationsPIX.pdf" target="_blank" > Voir le certificat</a></p>
       </article>
 
@@ -95,7 +95,7 @@
   
       <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Quentin Delvallée - Tous droits réservés</p>
+      <p>&copy; 2025 Quentin Delvallée - Tous droits réservés JULES</p>
       <p><a href="mail to : quintusdel@gmail.com">quintusdel@gmail.com</a></p>
     </div>
   </footer>
