Mes Projets Scolaires

--- a/Ma_Veille_technologique.html
+++ b/Ma_Veille_technologique.html
@@ -12,18 +12,18 @@
 		<li> <a href="CV.html">CV</a> </li>
 		<li> <a href="Certifications.html">Certifications </a> </li>
 		<li> <a href="Mes_projets_Scolaire.html">Mes Projets Scolaire</a> </li>
-        <li> <a href="Mes_projets_Personnels.html">Mes Projets Personnel</a> </li>
-        <li> <a href="Ma_Veille_technologique.html">Veille Technologique</a> </li>
-        <li> <a href="Mes_Expreriences_Professionnels.html">Experience Professionnel</a> </li>
-        <li> <a href="Passions.html">Mes passions</a> </li>
-        <li> <a href ="Contactez-moi.html"> Contactez-moi</a></li>
+    <li> <a href="Mes_projets_Personnels.html">Mes Projets Personnel</a> </li>
+    <li> <a href="Ma_Veille_technologique.html">Veille Technologique</a> </li>
+    <li> <a href="Mes_Expreriences_Professionnels.html">Experience Professionnel</a> </li>
+    <li> <a href="Passions.html">Mes passions</a> </li>
+    <li> <a href ="Contactez-moi.html"> Contactez-moi</a></li>
 
     </ul>
 	</nav>
 
 <div class="container">
   <header>
-    <h1>🤖 L'Inteligence A</h1>
+    <h1>🤖 L'Inteligence AI</h1>
   </header>
 
 
