--- a/Mes_projets_Scolaire.html
+++ b/Mes_projets_Scolaire.html
@@ -16,40 +16,42 @@
 		<li> <a href="CV.html">CV</a> </li>
 		<li> <a href="Certifications.html">Certifications </a> </li>
 		<li> <a href="Mes_projets_Scolaire.html">Mes Projets Scolaire</a> </li>
+    <li> <a href="Mes_projets_Personnels.html">Mes Projets Personnel</a> </li>
     <li> <a href="Ma_Veille_technologique.html">Veille Technologique</a> </li>
     <li> <a href="Mes_Expreriences_Professionnels.html">Experience Professionnel</a> </li>
     <li> <a href="Passions.html">Mes passions</a> </li>
     <li> <a href ="Contactez-moi.html"> Contactez-moi</a></li>
 
     </ul>
-	</nav>
+</nav>
+<br>
+<h44>Mes projets Scolaire</h44>
+<br>
+<div class="container">
+    <div class="section">    
+      <h1>BTS Aéronautique</h1>
+      <img src="images/BTS Aéronautique.jpg" height="250" width="500"></img> 
+    <ul>
+      <li>Réaliser dès l'année prochaine ou à la fin de mon BTS SIO au Louis Pergaud. Un BTS dans le domaine de l'Aéronautique à Toulouse.
+</li>
+    </ul>
+    </div>
+    <div class="section">
+        <h1>Bachelor Aéronautique aux États-Unis</h1>
+        <img src="images/Bachelor Aeronautique US.avif" height="250" width="500"></img>
+        <ul>
+            <li>Réaliser mon Bachelor (BAC+3) en Aéronautique aux États-Unis dans le domaine du spatial à Boca Chica</li>
+        </ul>
+    </div>
 
+    <div class="section">
+        <h1>Master ou Ingénieur</h1>
+        <img src="images/IPSA.png" height="250" width="500"></img>
+        <ul>
+            <li>Intégrer école de l'IPSA à Toulouse ce qui me permettra intégrer et apprendre les bases techniques de ingénerie spatial. </li>
+        </ul>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
   <footer>
     <div class="footer-content">
       <p>&copy; 2025 Quentin Delvallée - Tous droits réservés</p>
