--- a/Mes_projets_Scolaire.html
+++ b/Mes_projets_Scolaire.html
@@ -32,15 +32,22 @@
       <h1>BTS Aéronautique</h1>
       <img src="images/BTS Aéronautique.jpg" height="250" width="500"></img> 
     <ul>
-      <li>Réaliser dès l'année prochaine ou à la fin de mon BTS SIO au Louis Pergaud. Un BTS dans le domaine de l'Aéronautique à Toulouse.
-</li>
+      <p>Réaliser dès l'année prochaine ou à la fin de mon BTS SIO au Louis Pergaud. Un BTS dans le domaine de l'Aéronautique à Toulouse.</p>
+      <h3>Les avantages</h3>
+      <li>Orienté sur beaucoup de pratique</li>
+      <li>Beaucoup rechercher par les entreprises</li>
+      <li>Poursuite des études pour accessible</li>
     </ul>
     </div>
     <div class="section">
         <h1>Bachelor Aéronautique aux États-Unis</h1>
         <img src="images/Bachelor Aeronautique US.avif" height="250" width="500"></img>
         <ul>
-            <li>Réaliser mon Bachelor (BAC+3) en Aéronautique aux États-Unis dans le domaine du spatial à Boca Chica</li>
+            <p>Réaliser mon Bachelor (BAC+3) en Aéronautique aux États-Unis dans le domaine de l'aéronautique</p>
+            <h3>Les avantages</h3>
+            <li>Parler quotidiennement anglais</li>
+            <li>Apprendre et Comprendre Aéronautique Américains</li>
+            <li>Le Bachelor Aéronautique Américains est mieux reconnu que le Français</li>
         </ul>
     </div>
 
@@ -48,7 +55,11 @@
         <h1>Master ou Ingénieur</h1>
         <img src="images/IPSA.png" height="250" width="500"></img>
         <ul>
-            <li>Intégrer école de l'IPSA à Toulouse ce qui me permettra intégrer et apprendre les bases techniques de ingénerie spatial. </li>
+            <p>Intégrer école de l'IPSA à Toulouse ce qui me permettra intégrer et apprendre les bases techniques de ingénerie spatial. </p>
+            <h3>Les avantages</h3>
+            <li>Campus au coeur de la capitale Européenne de l'Aéronautique</li>
+            <li>Stages en entreprise dans les Grandes Entreprises aéronautique et industrielle</li>
+            <li>Campus technique dans les domaines de avionique, pilote de procédé</li>
         </ul>
     </div>
 
