--- a/Mes_projets_Personnels.html
+++ b/Mes_projets_Personnels.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <h1>Projet PERSONNEL</h1>
-    <a href="Index.html">Accueil</a>
+  <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 	<nav>
