--- a/Ma_Veille_technologique.html
+++ b/Ma_Veille_technologique.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <htmL lang ="fr">
   <head>
-    <h1>Ma_Veille_technologique</h1>
-    <a href="Index.html">Accueil</a>
+    
+    <link rel="stylesheet" href="style.css">
     <title >L'Inteligence Artificielle</title>
 </head>
 <body>
@@ -20,22 +20,8 @@
 
     </ul>
 	</nav>
-
-<div class="container">
-  <header>
-    <h1>🤖 L'Inteligence AI</h1>
-  </header>
-
-
-
-
-
-</div>
-
-
-
-
-
+<h1>Ma Veille technologique</h1>
+<img src ="./images/Pas disponible.png" width="30%">
   <footer>
     <div class="footer-content">
       <p>&copy; 2026 Quentin Delvallée - Tous droits réservés</p>
