--- a/Mes_projets_Personnels.html
+++ b/Mes_projets_Personnels.html
@@ -20,8 +20,17 @@
     </ul>
 	</nav>
 
+<h1>Projet CW'I</h1>
+<img src ="./images/plan.jpg" width="350" height="350"> <br>
+<p107>Travail en équipe qu'on a du réaliser pour Monsieur David, <br>
+dans le cadre d'un oral qu'on devait expliquer comment installé <br>
+un réseau pour les entreprises dans le local de CW'I</p107>
 
-
+<h1>Site Web de ma futur entreprise </h1>
+<img src ="./images/Mon Entreprise.png" width="350" height="250"> <br>
+<p107>Passionné par Aéronautique et le domaine de la Défense, <br>
+je souhaiterais créer mon entreprise dans plusieurs domaine <br>
+comme la conception 3D, aéronautique, Informatique</p107>
 
 
 
