--- a/Certifications.html
+++ b/Certifications.html
@@ -50,10 +50,10 @@
       </article>
       
       <article class="cert-card">
-        <img src="images/Photo_ClubEbios.png" alt="Permis-Avions" />
+        <img src="./images/Photo_ClubEbios.png" alt="" />
         <h3>EBIOS Risk Manager</h3>
         <p class="issuer"> MOOC — Janvier 2026</p>
-        <p><a href="./images/Attestation-CLUBEBIOS.pdf" target="_blank" > Voir le certificat</a></p>
+        <p><a href="./images/Delvallée-Quentin-Sio1-Attestation-CLUBEBIOS.pdf" target="_blank" > Voir le certificat</a></p>
       </article>
       
       <article class="cert-card">
@@ -94,7 +94,7 @@
   
       <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Quentin Delvallée - Tous droits réservés </p>
+      <p>&copy; 2026 Quentin Delvallée - Tous droits réservés </p>
       <p><a href="mail to : quintusdel@gmail.com">quintusdel@gmail.com</a></p>
     </div>
   </footer>
