--- a/Mes_Expreriences_Professionnels.html
+++ b/Mes_Expreriences_Professionnels.html
@@ -59,7 +59,7 @@
 						<def> Missions 2 : Gestion, organisations du stocks de l'entreprise <def> <br>
 						<def> Missions 3 : Récépection de colis de DHL, Chronopost</def> <br>						
 					
-						<h9>Stage General Electric en 2024</h9> 
+						<h9>Stage Direction des Systèmes d'Informations en 2024</h9> 
 				<div class="section">
 			<img src="images/Pandora DSI.jpg" height="350" width="350" alt="Travail DSI">
 			<img src="images/logo Grand Belfort.png" height="150" width="150" alt="Logo Grand Belfort" style="float: right; margin: 10px;"> 
@@ -80,7 +80,3 @@
 			</div>
 		</div>
 </body>
-    <div class="footer-content">
-      <p>&copy; 2025 Quentin Delvallée - Tous droits réservés</p>
-      <p><a href="mail to : quintusdel@gmail.com">quintusdel@gmail.com</a></p>
-    </div>
